[tool.poetry]
name = "mleng-with-python"
version = "0.1.0"
description = ""
authors = ["IbrahimOued <brahim.oued@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
